Renderizado de Folletos PDF

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "bryanjhv/slim-session": "~4.1.2",
         "defuse/php-encryption": "^2.2",
         "dompdf/dompdf": "^3.0",
+        "endroid/qr-code": "^5.1",
         "league/plates": "^3.5",
         "mobiledetect/mobiledetectlib": "^2.8",
         "monolog/monolog": "^1.24",
